# std_all_thai

./: .gitignore  README.md  app.py  data.py  pyproject.toml
