[tool.poetry]
name = "std-all-thai"
version = "0.1.0"
description = ""
authors = ["Fikree Hajiyusof <“fikree205m@gmail.com”>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.17.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
